# epic-dungeons

./: .gitignore  CMakeLists.txt  main.cpp
res/heroes/abomination/anim/: abomination.sprite.afflicted.json  abomination.sprite.attack_barf.json  abomination.sprite.attack_chain.json  abomination.sprite.attack_claw.json  abomination.sprite.attack_horns.json  abomination.sprite.attack_kneel.json  abomination.sprite.attack_shout.json  abomination.sprite.attack_transform.json  abomination.sprite.camp.json  abomination.sprite.combat.json  abomination.sprite.defend.json  abomination.sprite.heroic.json  abomination.sprite.idle.json  abomination.sprite.investigate.json  abomination.sprite.walk.json
res/heroes/abomination/fx/: abomination.sprite.absolution.json  abomination.sprite.manacles_target.json  abomination.sprite.rage.json  abomination.sprite.rake.json  abomination.sprite.slam.json  abomination.sprite.transform.json  abomination.sprite.vomit.json  abomination.sprite.vomit_target.json
res/heroes/antiquarian/anim/: antiquarian.sprite.afflicted.json  antiquarian.sprite.attack_censer.json  antiquarian.sprite.attack_guard.json  antiquarian.sprite.attack_heal.json  antiquarian.sprite.attack_melee.json  antiquarian.sprite.attack_ranged.json  antiquarian.sprite.camp.json  antiquarian.sprite.combat.json  antiquarian.sprite.defend.json  antiquarian.sprite.heroic.json  antiquarian.sprite.idle.json  antiquarian.sprite.investigate.json  antiquarian.sprite.walk.json
res/heroes/antiquarian/fx/: antiquarian.sprite.cower.json  antiquarian.sprite.festering_vapours.json  antiquarian.sprite.festering_vapours_target.json  antiquarian.sprite.flashpowder.json  antiquarian.sprite.flashpowder_target.json  antiquarian.sprite.fortifying_vapours.json  antiquarian.sprite.fortifying_vapours_target.json  antiquarian.sprite.invigorating_vapours.json  antiquarian.sprite.invigorating_vapours_target.json  antiquarian.sprite.kris_stab.json  antiquarian.sprite.protect_me.json
res/heroes/arbalest/anim/: arbalest.sprite.afflicted.json  arbalest.sprite.attack_artillery.json  arbalest.sprite.attack_bandage.json  arbalest.sprite.attack_point.json  arbalest.sprite.attack_ranged.json  arbalest.sprite.camp.json  arbalest.sprite.combat.json  arbalest.sprite.defend.json  arbalest.sprite.heroic.json  arbalest.sprite.idle.json  arbalest.sprite.investigate.json  arbalest.sprite.walk.json
res/heroes/arbalest/fx/: arbalest.sprite.battlefield_bandage.json  arbalest.sprite.battlefield_bandage_target.json  arbalest.sprite.bola_target.json  arbalest.sprite.flare.json  arbalest.sprite.sniper_mark.json  arbalest.sprite.sniper_shot.json  arbalest.sprite.sniper_shot_target.json  arbalest.sprite.suppressing_fire.json  arbalest.sprite.suppressing_fire_target.json
res/heroes/bounty_hunter/anim/: bounty_hunter.sprite.afflicted.json  bounty_hunter.sprite.attack_axe.json  bounty_hunter.sprite.attack_hook.json  bounty_hunter.sprite.attack_point.json  bounty_hunter.sprite.attack_punch.json  bounty_hunter.sprite.attack_slice.json  bounty_hunter.sprite.attack_throw.json  bounty_hunter.sprite.camp.json  bounty_hunter.sprite.combat.json  bounty_hunter.sprite.defend.json  bounty_hunter.sprite.heroic.json  bounty_hunter.sprite.idle.json  bounty_hunter.sprite.investigate.json  bounty_hunter.sprite.walk.json
res/heroes/bounty_hunter/fx/: bounty_hunter.sprite.collect_bounty.json  bounty_hunter.sprite.finish_him.json  bounty_hunter.sprite.flashbang.json  bounty_hunter.sprite.flashbang_target.json  bounty_hunter.sprite.hook_and_slice_target.json  (+2 more)
src/dungeon/cell/: cell.h
src/engine/: chest.cpp  chest.h  effect.h  engine.h  entities.h  entity.cpp  entity.h  game_object.h  item.h  party.cpp  skill.h  storage.cpp  storage.h
src/engine/attacks/: flashing_daggers.h  heal.h
src/engine/consumables/: heal.h
src/engine/heroes/: abomination.h  antiquarian.h  arbalest.h  bounty_hunter.h  crusader.h  grave_robber.h  hellion.h  hero.cpp  hero.h  highwayman.h
src/engine/items/: golden_coin.h
src/engine/monsters/: monster.h
src/engine/parsing/: armor.cpp  armor.h  hero.cpp  hero.h  hero_parser.h  reader.cpp  reader.h  skill.cpp  skill.h  weapon.cpp  weapon.h
src/engine/skills/: bandage.h
src/graphics/: color.cpp  color.h  graphics.cpp  graphics.h  renderer.h
src/graphics/drawables/: animation.cpp  animation.h  drawable.h  rectangle.cpp  rectangle.h  spine.cpp  spine.h  sprite.cpp  sprite.h  text.cpp  text.h  textbox.cpp  textbox.h
src/graphics/spine/: Animation.h  AnimationState.h  AnimationStateData.h  Atlas.h  AtlasAttachmentLoader.h  AttachmentLoader.h  Bone.h  BoundingBoxAttachment.h  Event.h  IkConstraint.h  IkConstraintData.h  MeshAttachment.h  RegionAttachment.h  Skeleton.h  SkeletonBounds.h  SkeletonData.h  SkeletonJson.h  Skin.h  SkinnedMeshAttachment.h  Slot.h  SlotData.h  extension.h  spine.h
src/gui_controller/: controller.h  dialog_manager.cpp  dialog_manager.h  timed_count.cpp  timed_count.h  utils.h  view.h
src/gui_controller/dialogue/: dialogue.cpp  dialogue.h
src/gui_controller/game/: game_machine.cpp  game_machine.h
src/gui_controller/keyboard_manager/: keyboard_manager.h
src/gui_controller/states/: game.h  main_menu.h  settings.h
src/gui_controller/utils/: cell_view.cpp  draw_entity.cpp  draw_map.cpp  draw_queue.cpp  draw_skills.cpp
src/gui_controller/views/: chest.cpp  chest.h  dialog.cpp  dialog.h  gradient.h  hero.cpp  hero.h  item_info.cpp  item_info.h  map.cpp  map.h  skill.cpp  skill.h  skill_info.cpp  skill_info.h  skill_selection.cpp  skill_selection.h  storage.cpp  storage.h
src/keyboard/: keyboard.h
src/logging/: logger.h
src/sound_manager/: sound_manager.h
src/static_data/: game_config.h
src/vector2d/: vector2d.cpp  vector2d.h
test/: parse.cpp
(+280 files in other folders)
